# weather-dashboard

./: .env.example  .gitignore  Dockerfile  README.md  celerybeat-schedule  docker-compose.yml  entrypoint.sh  pyproject.toml
core/: celery.py  settings.py  urls.py
templates/: base.html
templates/weather/: dashboard.html
weather/: admin.py  filters.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
weather/migrations/: 0001_initial.py  0002_alter_city_latitude_alter_city_longitude_and_more.py
weather/tests/: test_admin.py  test_base.py  test_models.py  test_serializers.py  test_views.py
