[tool.poetry]
name = "weather-dashboard"
version = "0.1.0"
description = "Dashboard for Weather Data"
authors = ["Vladyslav Timofieiev <vladislav.tmf@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.7"
python-dotenv = "^1.0.1"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.5.0"
httpx = "^0.28.1"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.1.2"
flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py312"]
exclude = "migrations/"

[tool.flake8]
max-line-length = 88
exclude = ["migrations/"]

[tool.isort]
profile = "black"
line_length = 88
py_version = "312"
skip = ["migrations"]
